# rustchain

./: .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DCO.md  EXECUTIVE_OFFICER_README.MD  IMPLEMENTATION_STATUS.md  MISSION_RUNNER_QUICKSTART.md  README.md  SECURITY.md  SPONSORS.md  context.db  executive_officer.py  main.rs  quick_audit_mission.yaml  rustchain.toml  xo_runtime_flexible.py
.githooks/: pre-commit
.github/: FUNDING.yml  copilot-instructions.md  copilot_instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/prompts/: deep-engineering.prompt.md
.github/workflows/: ci.yml  issue-completeness.yml  release.yml
MissionRunner-OneClick/: README.md  install.bat
audit_logs/: codebase_audit_report.md
benchmarks/: README.md
benchmarks/langchain_comparison/: BENCHMARK_REPORT.md  README.md  benchmark_report_final.md  generate_report.py  langchain_benchmark.py  langchain_benchmark_v2.py  langchain_results.json  langchain_results_ollama.json  langchain_results_ollama_v2.json  run_benchmark.sh  rustchain_benchmark.rs  rustchain_benchmark_v2.rs  rustchain_results.json  rustchain_results_ollama.json
cli/: commands.rs  main.rs
cli/subcommands/: invariant.rs
core/: audit.rs  model_manager.rs  perf.rs  plugin.rs  plugin_loader.rs  plugin_registry.rs  prompt_optimizer.rs  rbac.rs  reflection.rs  retrieval.rs  sandbox.rs  security.rs  telemetry.rs  tools.rs  wasm_executor.rs
docs/: README.md  cli-reference.md  installation.md  quickstart.md  transpilation.md
engine/: context.rs  graph_executor.rs
examples/: README.md  agent_reasoning.yaml  api_integration.yaml  basic_error_validation.rs  cross_platform_validation.rs  data_processing.yaml  documentation_validation.rs  error_handling_validation.rs  test_security_fixes.rs  test_step_validation.rs
meta/: mission_index.yaml
mission-stacks/: 01-config-foundation.yaml  01-llm-tools.yaml  03-async-runtime.yaml  03-llm-backend.yaml  04-memory-api.yaml  05-memory-system.yaml  05-tool-api.yaml  06-tool-registry.yaml  08-configuration.yaml  09-logging-telemetry.yaml  10-mission-executor.yaml  10-security-validation.yaml  11-web-tools.yaml  12-integration-testing.yaml  13-agent-sandbox.yaml  13-documentation.yaml  14-fix-existing-placeholders.yaml  14-invariant-runtime.yaml  16-logging-telemetry.yaml  17-schema-validation.yaml  18-config-bootstrap.yaml  20-ci-pipeline.yaml  23-model-manager.yaml  24-sandbox-isolation.yaml  25-toolchain-extension.yaml  26-agent-rbac.yaml  27-wasm-executor.yaml  28-telemetry-hooks.yaml  30-mock-fixtures.yaml  31-test-suite.yaml  33-cli-subcommands.yaml  34-security-config.yaml  37-retrieval-hybrid.yaml  39-model-switching.yaml  41-perf-dashboard.yaml  42-api-server.yaml  45-migration-utils.yaml  46-mission-index.yaml  48-async-runtime-bootstrap.yaml  49-integration-testing.yaml  (+3 more)
mission-stacks-done/: 00-bootstrap.yaml  00-error-foundation.yaml  02-agent-loop.yaml  02-feature-gates.yaml  04-mission-loader.yaml  06-rag-embedder.yaml  07-chain-execution.yaml  07-mission-executor.yaml  08-agent-loop.yaml  09-mission-loader.yaml  10-mission-executor.yaml  11-context-engine.yaml  12-cli-runner.yaml  15-cleanup-unwrap-calls.yaml  15-plugin-scaffold.yaml  16-final-validation.yaml  19-replay-framework.yaml  21-devtools-deps.yaml  22-llm-prompt-cache.yaml  29-invariant-cli.yaml  32-plugin-registry-integration.yaml  35-error-audit-logging.yaml  36-graph-executor.yaml  38-prompt-optimizer.yaml  40-chain-visualizer.yaml  43-agent-reflection.yaml  44-plugin-marketplace.yaml  52-secure-tool-wrapper.yaml
server/: api.rs
src/: build_dashboard.rs  constants.rs  invariant_ppt.rs  lib.rs  main.rs
src/benchmarks/: mod.rs
src/cli/: commands.rs  commands_pretty.rs  handlers_pretty.rs  help_examples.rs  interactive.rs  main.rs  mod.rs  pretty.rs  runner.rs
src/cli/handlers/: mod.rs
src/core/: agent.rs  audit.rs  chain.rs  chroma_vector_store.rs  config.rs  document_loaders.rs  error.rs  error_formatting.rs  executor.rs  features.rs  github_toolkit.rs  http_client.rs  llm.rs  logging.rs  memory.rs  mission.rs  mod.rs  pinecone_vector_store.rs  plugin.rs  python_interpreter.rs  tools.rs  web_search_tools.rs
src/core/memory/: tests.rs
src/engine/: chain_executor.rs  mod.rs
src/engine/tests/: test_new_step_types.rs
src/llm/: aws_bedrock_provider.rs  azure_openai_provider.rs  google_gemini_provider.rs  mod.rs  shimmy_provider.rs  test_connectivity.rs
src/policy/: mod.rs
src/rag/: mod.rs
src/registry/: mod.rs
src/runtime/: mod.rs  sandbox.rs
src/safety/: mod.rs
src/sandbox/: mod.rs
src/security/: access_control.rs  audit.rs  auth.rs  encryption.rs  mod.rs  threat_detection.rs
src/server/: agent_api.rs  mod.rs  rate_limit.rs
src/telemetry/: mod.rs
src/testing/: invariants.rs
src/tools/: echo.rs  math.rs  mod.rs  registry.rs  shimmy_file_ops.rs
src/transpiler/: airflow.rs  bash.rs  common.rs  cron.rs  docker_compose.rs  export.rs  github_actions.rs  jenkins.rs  kubernetes.rs  langchain.rs  mod.rs  terraform.rs
src/validation/: mod.rs
test/: mocks.rs
tests/: basic_step_validation.rs  comprehensive_invariants.rs  functional_tool_tests.rs  integration_end_to_end.rs  regression_tests.rs  release_gate_invariants.proptest-regressions  release_gate_invariants.rs  security_fixes_validation.rs  test_suite.rs
tools/: migration.rs  visualizer.rs
